# SATOpti

./: CMakeLists.txt  LICENSE  README.md
src/: Cust_Window.cpp  Cust_Window.h  DebugDrawMode.cpp  DebugDrawMode.h  DebugDrawModeGJK.cpp  DebugDrawModeGJK.h  DebugMode.cpp  DebugMode.h  DrawWindow.cpp  DrawWindow.h  EventIO.cpp  EventIO.h  Geom.cpp  Geom.h  MenuInterface.cpp  MenuInterface.h  Params.h  PerfTest.cpp  PerfTest.h  Random.cpp  Random.h  ScanEvents.cpp  ScanEvents.h  Utilities.cpp  Utilities.h  VertexReductionVisu.cpp  VertexReductionVisu.h  main.cpp
